--- a/eQuotationModule/.settings/org.eclipse.core.resources.prefs
+++ b/eQuotationModule/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/resources/META-INF/resources/info.jsp=UTF-8
 encoding//src/main/resources/META-INF/resources/view.jsp=UTF-8
