--- a/eQuotationModule/bin/content/Language.properties
+++ b/eQuotationModule/bin/content/Language.properties
@@ -34,3 +34,4 @@ bid_created = Created
 bid_general_info = General info
 bid_number = Bid No.
 bid_method = Bid method
+bid_related_conditions = Related conditions
