--- a/eQuotationModule/src/main/resources/content/Language.properties
+++ b/eQuotationModule/src/main/resources/content/Language.properties
@@ -68,5 +68,19 @@ bid_date_submission = The date and time for the submission of applications
 
 bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
 bid_delivery_address = Delivery address
+#block first,second 
 bid_task_each = The task for each lot separately
 bid_task_whole = The task for the whole order
+
+#second block
+
+bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
+bid_delivery_time = Delivery time
+
+#third block
+
+bid_validity_tenders = VALIDITY TENDERS
+
+#fourth
+ 
+bid_application_software
