--- a/eQuotationModule/build.gradle
+++ b/eQuotationModule/build.gradle
@@ -12,4 +12,7 @@ dependencies {
 	compile project (":modules:Orgindex:Orgindex-api")
 	 compile project (":modules:IzveweniePut:IzveweniePut-api")
 	 compile project (":modules:PorjadokRabotyKomissii:PorjadokRabotyKomissii-api")
+	 
+	  compile project (":modules:StatusIzvewenij:StatusIzvewenij-api")
+	 
 }
