service builder "InformacijaORazmewenii"

--- a/eQuotationModule/build.gradle
+++ b/eQuotationModule/build.gradle
@@ -21,5 +21,5 @@ dependencies {
 	compile project (":modules:Okgz:Okgz-api")
 	compile project (":modules:Edinicyizmerenija:Edinicyizmerenija-api")
 	compile project (":modules:Strany:Strany-api")
-	
+	compile project (":modules:InformacijaRazmewenii:InformacijaRazmewenii-api")
 	}
