listlots bug resolved

--- a/eQuotationModule/build.gradle
+++ b/eQuotationModule/build.gradle
@@ -7,7 +7,7 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.compendium", version: "5.0.0"
 	
     
-    compile project (":modules:Spisoklotov:Spisoklotov-api")
+    compile project (":modules:SpisokLots:SpisokLots-api")
     
 	compile project (":modules:tipy.izvewenij:tipy.izvewenij-api")
 	compile project (":modules:Izvewenija:Izvewenija-api")
