add good, work and service

--- a/eQuotationModule/build.gradle
+++ b/eQuotationModule/build.gradle
@@ -25,4 +25,5 @@ dependencies {
 	
 	compile project (":modules:IstochnikFinansirovanija:IstochnikFinansirovanija-api")
 	compile project (":modules:ObwajaInformacija:ObwajaInformacija-api")
+	compile project (":modules:SpisokTovarov:SpisokTovarov-api")
 	}
