add Supplier Workplace

--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -2,4 +2,20 @@ javax.portlet.display-name.SupplierWorkplace=SupplierWorkplace JSP
 javax.portlet.keywords.SupplierWorkplace=SupplierWorkplace,jsp
 javax.portlet.short-title.SupplierWorkplace=SupplierWorkplace JSP
 javax.portlet.title.SupplierWorkplace=SupplierWorkplace JSP Portlet
+
 SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
+
+
+
+#acion
+action.NEW=New
+action.DELETE=Delete
+action.EDIT=Edit
+action.READ=Read
+
+
+preparation=Preparation
+submission_of_proposals=Submission of proposals
+evaluation_and_awarding=Evaluation and awarding
+unfulfilled_tenders=Unfulfilled tenders
+completed_tenders=Completed tenders
