created filing of application

--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -19,3 +19,6 @@ submission_of_proposals=Submission of proposals
 evaluation_and_awarding=Evaluation and awarding
 unfulfilled_tenders=Unfulfilled tenders
 completed_tenders=Completed tenders
+
+id_bid=No
+actions_bid=Actions
