--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -5,4 +5,13 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
+	
+		compile project (":modules:IzveweniePut:IzveweniePut-api")
+		compile project (":modules:Izvewenija:Izvewenija-api")
+		
+		
+		compile project (":modules:SpisokLots:SpisokLots-api")
+
 }
+
+
