--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -22,3 +22,57 @@ completed_tenders=Completed tenders
 
 id_bid=No
 actions_bid=Actions
+
+
+#first block
+
+bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
+delivery_address = DELIVERY ADDRESS
+bid_delivery_address =
+#block first,second 
+bid_task_each = Assignment for each lot separately
+bid_task_whole = Assignment for the entire order
+
+#second block
+
+bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
+delivery_time = DELIVER TIME
+bid_delivery_time = 
+
+#third block
+
+validity = VALIDITY
+bid_validity_tenders = 
+#fourth
+ 
+software_application = SOFTWARE APPLICATION
+
+bid_the_task_for_each_lot_separately = Assignment for each lot separately
+bid_the_task_for_the_whole_order = Assignment for the entire order
+bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
+bid_bonds = Bonds
+bid_bank_guarantee = Bank guarantee
+bid_paper = Paper
+bid_deposits = deposits
+bid_Free_float = Free float
+bid_percentage = Percentage %
+big_term_and_procedure_of_the_software_application = Term and procedure of the software application
+bid_percent_software_application = 
+bid_software_application =
+#five
+enforcement = Enforcement
+bid_performance_contract=Performance contract
+bid_enforcement = 
+bid_percent_enforcement = 
+
+#six
+other_conditions = OTHER CONDITIONS
+big_payment = Payment
+big_assignment_for_each_lot_separately = Assignment for each lot separately
+big_assignment_for_the_entire_order = Assignment for the entire order
+big_price_of_delivery = Price of delivery
+big_concomitant_conditions = Concomitant conditions
+bid_performance_contract = Term and procedure for granting security for performance of the contract
+bid_assignment_lot_payment = 
+bid_assignment_lot_delivery = 
+bid_assignment_lot_conditions = 
