--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 		
 		
 		compile project (":modules:SpisokLots:SpisokLots-api")
-
+		compile project (":modules:InformacijaRazmewenii:InformacijaRazmewenii-api")
 }
 
 
