--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -76,3 +76,22 @@ bid_performance_contract = Term and procedure for granting security for performa
 bid_assignment_lot_payment = 
 bid_assignment_lot_delivery = 
 bid_assignment_lot_conditions = 
+
+bid_general_info = General info
+bid_number = Bid No.
+bid_number_value = Automatically generated
+bid_method = Bid method
+bid_related_conditions = Related conditions
+bid_related_conditions_value = The amount is not more than 500 000,00 somoni
+bid_approval_publication = Approval publication
+bid_approval_publication_value = Required are mandatory coordination with the authorized body!
+bid_authorized_body = Authorized body
+bid_name_notification = Name of the notification
+bid_number_ifb_a = Number IFB (A)
+bid_number_ifb_c = Number IFB (C)
+
+#source of financing
+source_financing = SOURCE FINANCING
+local_budget_bid=Local budget
+bid_republican_budget = republican budget
+bid_own_funds = Own funds
