--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 		
 		compile project (":modules:SpisokLots:SpisokLots-api")
 		compile project (":modules:InformacijaRazmewenii:InformacijaRazmewenii-api")
+        compile project (":modules:IstochnikFinansirovanija:IstochnikFinansirovanija-api")
 }
 
 
