--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -13,24 +13,26 @@ SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
 #action.EDIT=Edit
 #action.READ=Read
 
-# naimenovanie 
-filing_applications=\u041F\u041E\u0414\u0410\u0427\u0410 \u0417\u0410\u042F\u0412\u041E\u041A 
-opening_and_determining_the_winner=\u0412\u0421\u041A\u0420\u042B\u0422\u0418\u0415 \u0418 \u041E\u041F\u0420\u0415\u0414\u0415\u041B\u0415\u041D\u0418\u0415 \u041F\u041E\u0411\u0415\u0414\u0418\u0422\u0415\u041B\u042F
-incoming_orders=\u041D\u0415\u0421\u041E\u0421\u0422\u041E\u042F\u0412\u0428\u0418\u0415\u0421\u042F \u0417\u0410\u041A\u0410\u0417\u042B
-completed_orders=\u0417\u0410\u0412\u0415\u0420\u0428\u0415\u041D\u041D\u042B\u0415 \u0417\u0410\u041A\u0410\u0417\u042B
+# naimenovanie
+filing_applications=filing applications
+opening_and_determining_the_winner=opening and determining the winner
+incoming_orders=incoming orders
+completed_orders=completed orders
 
-forming_application=\u0424\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0437\u0430\u044F\u0432\u043A\u0438
-lot_name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u043B\u043E\u0442\u0430
-take_part=\u041F\u0440\u0438\u043D\u044F\u0442\u044C \u0443\u0447\u0430\u0441\u0442\u0438\u0435
-view_application=\u041F\u043E\u0441\u043C\u043E\u0442\u0440\u0435\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
-withdraw_application=\u041E\u0442\u043E\u0437\u0432\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
-refuse_participate=\u041E\u0442\u043A\u0430\u0437\u0430\u0442\u044C\u0441\u044F \u043E\u0442 \u0443\u0447\u0430\u0441\u0442\u0438\u044F
-delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
-info_docum=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0435
+forming_application=forming application
+lot_name=lot name
+take_part=take part
+view_application=view application
+withdraw_application=withdraw an application
+refuse_participate=refuse to participate 
+delete=delete
+info_docum=Information about document
 
-application=\u0417\u0410\u042F\u0412\u041A\u0410
-other_information=\u041F\u0420\u041E\u0427\u0410\u042F \u0418\u041D\u0424\u041E\u0420\u041C\u0410\u0426\u0418\u042F
-documentation=\u0414\u041E\u041A\u0423\u041C\u0415\u041D\u0422\u0410\u0426\u0418\u042F
+application=application
+other_information=other information
+documentation=documentation
+
+
 
 preparation=Preparation
 submission_of_proposals=Submission of proposals
