--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -13,6 +13,7 @@ dependencies {
 		compile project (":modules:SpisokLots:SpisokLots-api")
 		compile project (":modules:InformacijaRazmewenii:InformacijaRazmewenii-api")
         compile project (":modules:IstochnikFinansirovanija:IstochnikFinansirovanija-api")
+		compile project (":modules:Tariff:Tariff-api")
 }
 
 
