--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -116,3 +116,5 @@ source_financing = SOURCE FINANCING
 local_budget_bid=Local budget
 bid_republican_budget = republican budget
 bid_own_funds = Own funds
+
+befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
