add  Publish and  Approve for bid

--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -12,7 +12,7 @@ SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
 #action.DELETE=Delete
 #action.EDIT=Edit
 #action.READ=Read
-
+action.order_details = Order Details
 # naimenovanie
 filing_applications=filing applications
 opening_and_determining_the_winner=opening and determining the winner
