--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -14,23 +14,71 @@ SupplierWorkplace.caption=Hello from SupplierWorkplace JSP!
 #action.READ=Read
 
 # naimenovanie
-filing_applications=filing applications
-opening_and_determining_the_winner=opening and determining the winner
-incoming_orders=incoming orders
-completed_orders=completed orders
+filing_applications=Filing applications
+opening_and_determining_the_winner=Opening and determining the winner
+incoming_orders=Incoming orders
+completed_orders=Completed orders
 
-forming_application=forming application
-lot_name=lot name
-take_part=take part
-view_application=view application
-withdraw_application=withdraw an application
-refuse_participate=refuse to participate 
-delete=delete
+forming_application=Forming application
+lot_name=Lot name
+take_part=Take part
+view_application=View application
+withdraw_application=Withdraw an application
+refuse_participate=Refuse to participate 
+delete=Delete
 info_docum=Information about document
 
-application=application
-other_information=other information
-documentation=documentation
+application=Application
+other_information=Other information
+documentation=Documentation
+
+list_goods=List goods
+
+No=No
+customer_request=Customer request
+belonging_okgz=Belonging to the OKGZ
+code_okgz=Code OKGZ
+description_goods=Description of goods (Form of issue)
+unit_measure=Unit of measure
+quantity=Quantity
+country_origin=Country of origin
+
+#document name
+documentation=Documentation
+documentation2=Documentation
+number_lot=Number of lot:
+item_name=Item name:
+documents_name=Documents name
+qualification_requirements=Qualification requirements
+conditions=Conditions
+
+#info lot
+information_lot=Information on lot No
+
+generalinfo=General info
+number_of_lot=Lot number
+item_name=Item name
+classification_ebc=classification EBC
+
+info_about_customer=Information about the customer
+procuring_entity=The procuring entity
+bsc_vbk=BSC code for VBK
+
+
+bid_enforcement=Enforcement of the contract
+other_conditions=Other conditions
+
+
+
+#TAKEPART
+take_part=Take part
+current_account=Current account
+balance_information=Balance information
+list_documents=List of documents
+download_documentation=Download documentation
+documents_name=Documents name
+file=File
+download_documentation=Download documentation
 
 
 
@@ -45,9 +93,8 @@ actions_bid=Actions
 
 
 #first block
-
 bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
-delivery_address = DELIVERY ADDRESS
+delivery_address=Delivery address
 bid_delivery_address =
 #block first,second 
 bid_task_each = Assignment for each lot separately
@@ -56,31 +103,36 @@ bid_task_whole = Assignment for the entire order
 #second block
 
 bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
-delivery_time = DELIVER TIME
+delivery_time=Delivery time
 bid_delivery_time = 
 
 #third block
 
-validity = VALIDITY
-bid_validity_tenders = 
+validity=Term of tender application
+
 #fourth
  
-software_application = SOFTWARE APPLICATION
+software_application =Ensuring the application
+bid_ensuring_the_application_is_not_required=Application is not required
+bid_bonds=Bonds
+bid_bank_guarantee=Bank guarantee
+bid_paper=Paper
+bid_deposits=Deposits
+bid_Free_float=Shares in free float
+bid_percentage=In percentages
+big_term_and_procedure_of_the_software_application=Term and procedure for granting security of an application
+bid_percent_software_application = 
+bid_software_application =
+
+
+
+
+
 
 bid_the_task_for_each_lot_separately = Assignment for each lot separately
 bid_the_task_for_the_whole_order = Assignment for the entire order
-bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
-bid_bonds = Bonds
-bid_bank_guarantee = Bank guarantee
-bid_paper = Paper
-bid_deposits = deposits
-bid_Free_float = Free float
-bid_percentage = Percentage %
-big_term_and_procedure_of_the_software_application = Term and procedure of the software application
-bid_percent_software_application = 
-bid_software_application =
 #five
-enforcement = Enforcement
+enforcement=Enforcement of the contract
 bid_performance_contract=Performance contract
 bid_enforcement = 
 bid_percent_enforcement = 
@@ -98,7 +150,7 @@ bid_assignment_lot_delivery =
 bid_assignment_lot_conditions = 
 
 
-bid_general_info = General info
+
 bid_number = Bid No.
 bid_number_value = Automatically generated
 bid_method = Bid method
@@ -116,5 +168,3 @@ source_financing = SOURCE FINANCING
 local_budget_bid=Local budget
 bid_republican_budget = republican budget
 bid_own_funds = Own funds
-
-befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
