--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -16,6 +16,9 @@ dependencies {
         compile project (":modules:BalansPostavwika:BalansPostavwika-api")
           compile project (":modules:OplachennyeZakazy:OplachennyeZakazy-api")
 		compile project (":modules:Tariff:Tariff-api")
+		compile project (":modules:SpisokTovarov:SpisokTovarov-api")
+		compile project (":modules:Edinicyizmerenija:Edinicyizmerenija-api")
+			compile project (":modules:Strany:Strany-api")
 }
 
 
