--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -118,3 +118,5 @@ bid_republican_budget = republican budget
 bid_own_funds = Own funds
 
 befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
+
+the_price_for  = The price for
