--- a/SupplierWorkplace/src/main/resources/content/Language.properties
+++ b/SupplierWorkplace/src/main/resources/content/Language.properties
@@ -120,3 +120,8 @@ bid_own_funds = Own funds
 befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
 
 the_price_for  = The price for
+
+vendor-proposal = Vendor Proposal
+description-of-goods = Description of goods (Form of issue)
+country-of-origin  = Country of origin
+unit-price = Unit price
