--- a/SupplierWorkplace/bin/content/Language.properties
+++ b/SupplierWorkplace/bin/content/Language.properties
@@ -32,6 +32,13 @@ application=application
 other_information=other information
 documentation=documentation
 
+list_docum = LIST OF DOCUMENTS
+download_docum = DOWNLOAD DOCUMENTATION
+document_name = Document name
+document_description = Document description
+document = Document
+
+
 
 
 preparation=Preparation
@@ -46,9 +53,9 @@ actions_bid=Actions
 
 #first block
 
-bid_title_delivery_address=PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
-delivery_address = DELIVERY ADDRESS
-bid_delivery_address =
+bid_title_delivery_address = PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
+delivery_address = PLACE OF DELIVERY OF THE GOODS OF EXECUTION OF WORKS, RENDERING SERVICES
+bid_delivery_address = 
 #block first,second 
 bid_task_each = Assignment for each lot separately
 bid_task_whole = Assignment for the entire order
@@ -56,8 +63,9 @@ bid_task_whole = Assignment for the entire order
 #second block
 
 bid_title_delivery_time = TERM DELIVERY OF GOODS, WORKS AND SERVICES
-delivery_time = DELIVER TIME
+delivery_time = TIME OF DELIVERY OF GOODS, EXECUTION OF WORKS, RENDERING SERVICES
 bid_delivery_time = 
+bid_conditions_of_customer = Conditions of the customer:
 
 #third block
 
@@ -67,8 +75,8 @@ bid_validity_tenders =
  
 software_application = SOFTWARE APPLICATION
 
-bid_the_task_for_each_lot_separately = Assignment for each lot separately
-bid_the_task_for_the_whole_order = Assignment for the entire order
+bid_own_offer = Own offer
+bid_in_accordance_customer = In accordance with the terms of the customer
 bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
 bid_bonds = Bonds
 bid_bank_guarantee = Bank guarantee
