--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -3,3 +3,21 @@ javax.portlet.keywords.CommissionModule=CommissionModule,jsp
 javax.portlet.short-title.CommissionModule=CommissionModule JSP
 javax.portlet.title.CommissionModule=CommissionModule JSP Portlet
 CommissionModule.caption=Hello from CommissionModule JSP!
+
+source_financing = SOURCE FINANCING
+local_budget_bid=Local budget
+bid_republican_budget = republican budget
+bid_own_funds = Own funds
+befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
+the_price_for  = The price for
+vendor-proposal = Vendor Proposal
+description-of-goods = Description of goods (Form of issue)
+country-of-origin  = Country of origin
+unit-price = Unit price
+unit = Unit
+total-goods = Total for the goods
+supplier = Supplier
+customer = Customer
+not-indicated = Not indicated
+allocated-amount = Allocated amount
+saving = Saving
