comission "other info"

--- a/CommissionModule/build.gradle
+++ b/CommissionModule/build.gradle
@@ -13,4 +13,6 @@ dependencies {
 	    compile project (":modules:SpisokTovarov:SpisokTovarov-api")
 	    	compile project (":modules:Edinicyizmerenija:Edinicyizmerenija-api")
 	    				compile project (":modules:Strany:Strany-api")
+	    				compile project (":modules:ProchajaInformacijaZajavki:ProchajaInformacijaZajavki-api")
+	    				
 }
