--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -21,3 +21,61 @@ customer = Customer
 not-indicated = Not indicated
 allocated-amount = Allocated amount
 saving = Saving
+
+conditions-customer = Conditions of the customer
+conditions-supplier = Conditions of the supplier
+
+
+other_information=Other information
+
+#first block
+
+bid_title_delivery_address = PLACE OF DELIVERY OF THE PRODUCT PERFORMANCE WORKS, RENDERING SERVICES
+delivery_address = PLACE OF DELIVERY OF THE GOODS OF EXECUTION OF WORKS, RENDERING SERVICES
+bid_delivery_address = 
+#block first,second 
+bid_task_each = Assignment for each lot separately
+bid_task_whole = Assignment for the entire order
+
+#second block
+delivery_time = TIME OF DELIVERY OF GOODS, EXECUTION OF WORKS, RENDERING SERVICES
+delivery=Delivery time
+bid_delivery_time = 
+bid_conditions_of_customer = Conditions of the customer:
+
+#third block
+
+validity = VALIDITY
+bid_validity_tenders = 
+
+#fourth
+software_application = SOFTWARE APPLICATION
+bid_own_offer = Own offer
+bid_in_accordance_customer = In accordance with the terms of the customer
+bid_ensuring_the_application_is_not_required = Term and procedure for granting security of an application
+bid_bonds = Bonds
+bid_bank_guarantee = Bank guarantee
+bid_paper = Paper
+bid_deposits = deposits
+bid_Free_float = Free float
+bid_percentage = Percentage %
+big_term_and_procedure_of_the_software_application = Term and procedure of the software application
+bid_percent_software_application = 
+bid_software_application =
+#five
+enforcement = Enforcement
+bid_performance_contract=Performance contract
+bid_enforcement = 
+bid_percent_enforcement = 
+
+#six
+other_conditions = OTHER CONDITIONS
+big_payment = Payment
+big_assignment_for_each_lot_separately = Assignment for each lot separately
+big_assignment_for_the_entire_order = Assignment for the entire order
+big_price_of_delivery = Price of delivery
+big_concomitant_conditions = Concomitant conditions
+bid_performance_contract = Term and procedure for granting security for performance of the contract
+bid_assignment_lot_payment = 
+bid_assignment_lot_delivery = 
+bid_assignment_lot_conditions = 
