--- a/SupplierWorkplace/build.gradle
+++ b/SupplierWorkplace/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
+	compileOnly group: "org.freemarker", name: "freemarker", version: "2.3.23"
 	
 		compile project (":modules:IzveweniePut:IzveweniePut-api")
 		compile project (":modules:Izvewenija:Izvewenija-api")
@@ -22,6 +23,9 @@ dependencies {
 			compile project (":modules:ZajavkiOtPostavwikov:ZajavkiOtPostavwikov-api")
 		compile project (":modules:SupplierRequestLot:SupplierRequestLot-api")	
 		compile project (":modules:ProchajaInformacijaZajavki:ProchajaInformacijaZajavki-api")
+		compile project (":modules:PorjadokRabotyKomissii:PorjadokRabotyKomissii-api")
+		compile project (":modules:SystemConfig:SystemConfig-api")
+		compile project (":modules:tipy.izvewenij:tipy.izvewenij-api")
 }
 
 
