Determining the winner

--- a/CommissionModule/build.gradle
+++ b/CommissionModule/build.gradle
@@ -16,5 +16,6 @@ dependencies {
 	    				compile project (":modules:ProchajaInformacijaZajavki:ProchajaInformacijaZajavki-api")
 	    				compile project (":modules:Criterias:Criterias-api")
 	    				compile project (":modules:SupplierCriteria:SupplierCriteria-api")
+	    				    compile project (":modules:Bidqueue:Bidqueue-api")
 	    				
 }
