--- a/OrgImport/build.gradle
+++ b/OrgImport/build.gradle
@@ -5,6 +5,6 @@ dependencies {
 	compileOnly group: "javax.servlet", name: "javax.servlet-api", version: "3.0.1"
 	compileOnly group: "jstl", name: "jstl", version: "1.2"
 	compileOnly group: "org.osgi", name: "osgi.cmpn", version: "6.0.0"
-	compile project (":modules:SAPPServices:SAPPServices-api")
+	compile project (":modules:Vbk:Vbk-api")
 	compile project (":modules:postavwiki:postavwiki-api")
 }
