--- a/CommissionModule/build.gradle
+++ b/CommissionModule/build.gradle
@@ -18,4 +18,5 @@ dependencies {
 	    				compile project (":modules:SupplierCriteria:SupplierCriteria-api")
 	    				    compile project (":modules:Bidqueue:Bidqueue-api")
 	    				compile project (":modules:LotWinner:LotWinner-api")
+	    				compile project (":modules:ProtocolContracts:ProtocolContracts-api")
 }
