--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -83,8 +83,16 @@ bid_assignment_lot_conditions =
 
 #Pratocol contracts
 
-pratacol-number = <strong> Protocol No. {0} </strong>
-automated-system = <strong>Automated system of public procurement web portal {0} in comparison, evaluation and selection of bids for the conclusion of a contract for the supply of goods</strong>
-general-bid-info = <strong>General bid information</strong>
-bid-number = bid number <br> {0}
-organization-name = Name of organization <br> {0}
+pratacol-number = <h3>Protocol No. {0}</h3>
+automated-system = <h4>Automated system of public procurement web portal {0} in comparison, evaluation and selection of bids for the conclusion of a contract for the supply of goods</h4><br>
+general-bid-info = <h4>General bid information</h4>
+bid-number = <p>bid number <br> {0}</p>
+organization-name = <p>Name of organization <br> {0}</p>
+date-time-protocol-generation = <p> Date and time of the protocol generation <br> {0}</p>
+subject-procurement = <h5>The subject of procurement</h5>
+lot-number = <strong>Lot No. {0} </strong> Name: <span style="color:#319CFF">{1}</span> Allocated amount: <strong>{2}</strong>
+procuring-entity = <h5> The procuring entity </h5> <p> {0} </p>
+vbk-code = <p>VBK code: {0}</p> 
+i-comparison-quotations = <h4>I. COMPARISON OF QUOTATIONS OF PARTICIPANTS BY LOT No.{0}</h4>
+approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance with the criterion of the lowest price</p>
+
