--- a/eQuotationModule/build.gradle
+++ b/eQuotationModule/build.gradle
@@ -13,11 +13,10 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.portal.upgrade", version: "2.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.registry.api", version: "1.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.trash.taglib", version: "2.0.0"
-	    
-	    compileOnly group: 'javax.activation', name: 'activation', version: '1.1.1'
-		compileOnly group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
-
 	
+	  compile group: 'javax.activation', name: 'activation', version: '1.1.1'  
+     compile group: 'javax.mail', name: 'javax.mail-api', version: '1.5.5'
+     
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.util.taglib", version: "2.0.0"
 	compileOnly group: "javax.portlet", name: "portlet-api", version: "2.0"
