--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -96,3 +96,45 @@ vbk-code = <p>VBK code: {0}</p>
 i-comparison-quotations = <h4>I. COMPARISON OF QUOTATIONS OF PARTICIPANTS BY LOT No.{0}</h4>
 approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance with the criterion of the lowest price</p>
 
+
+   #table supplier organization 
+     
+     #header table
+     
+     number = <strong>No.</strong>
+     name-and-address = <strong>Name of participant and his address</strong>
+     number-positions = <strong>Number of positions</strong>
+	 allocated-amount = <strong>Allocated amount</strong>
+	 bid-price-participant = <strong>Bid price of participant</strong>
+	 sum-savings = <strong>Sum of savings</strong>
+	 economy = <strong>Economy</strong>
+	 info-bid = <strong>Information on the content of the bid</strong>
+	 
+	 #The value of the table field
+	 member-status = <strong>Member status</strong>
+	 bid-details  = Bid details
+	 
+  #table goods winner lot
+     #header table
+       
+     goods = <strong>Goods</strong>  
+   	 producing-country = <strong>Producing country</strong>
+   	 unit = <strong>Unit of measurement</strong>
+	 amount-per-unit = <strong>The proposed amount per unit</strong>
+	 total-goods = <strong>Total for goods</strong>
+	 
+	 total-price = <strong>Total price: {0}</strong>
+	 
+	 
+##
+     evaluation-proposals = <h4>II. EVALUATION OF PROPOSALS OF PARTICIPANTS BY LOT No.{0}</h4>	 
+     
+    approve-procedure = <p>2. To approve the procedure for determining the completeness and correctness of the execution of proposals under ordinal numbers 1, 2 and 3, the compliance of the conditions of these bids with the conditions established by the procuring entity and the compliance of these participants with the minimum qualifying requirements established for applicants participating in the request for quotations Electronic form.</p>
+    choice-best = <h4>III. CHOICE OF THE BEST OFFER BY LOT No.{0}</h4>
+    recognize-proposal = <p>3. Recognize the proposal <strong> {0} </ string> to the relevant conditions established by the procuring entity and recommend to the procuring entity to conclude a contract with the above-mentioned Winner on the following terms as proposed by the Winner:</p>
+    
+    conclusion-agreement = <h4>IV. CONCLUSION OF AGREEMENT ON LOT No.{0}</h4>
+    recommend-procuring  = <p>1. To recommend to the procuring entity not later than 72 hours from the moment of determining the Winner to consider the issue of concluding a Contract No. __ from {0} for a sum of {1} TJS on the terms proposed by the Winner in 4 (four) copies.</p>
+    oblige-procuring = <p>2. To oblige the procuring entity to submit to the State Procurement Agency the goods, works and services under the Government of the Republic of Tajikistan one of the copies of the Contract concluded by the Parties within two days from the date of signing the Contract.</p>
+    oblige-procuring-entity = <p>3. To oblige the procuring entity, in the event of its refusal to enter into the Contract, to notify the operator of the SISP in writing about the relevant reasons for the refusal within two days from the date of adoption of such decision, and the operator of the SISG to take the necessary actions to compile the report.</p>
+    case-winners = <p>4. In case of the winner's refusal to conclude the Contract, recommend the procuring entity to sign a contract with {0} for the amount of {1} somoni. Parties to implement the actions provided for in paragraphs 1 and 2 of section IV.</p>
