--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -138,3 +138,6 @@ approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance
     oblige-procuring = <p>2. To oblige the procuring entity to submit to the State Procurement Agency the goods, works and services under the Government of the Republic of Tajikistan one of the copies of the Contract concluded by the Parties within two days from the date of signing the Contract.</p>
     oblige-procuring-entity = <p>3. To oblige the procuring entity, in the event of its refusal to enter into the Contract, to notify the operator of the SISP in writing about the relevant reasons for the refusal within two days from the date of adoption of such decision, and the operator of the SISG to take the necessary actions to compile the report.</p>
     case-winners = <p>4. In case of the winner's refusal to conclude the Contract, recommend the procuring entity to sign a contract with {0} for the amount of {1} somoni. Parties to implement the actions provided for in paragraphs 1 and 2 of section IV.</p>
+    
+    title = Public Procurement Portal - Protocol for the conclusion of a contract for the supply of goods
+     approved-organization = <p><strong><<Approved>></strong> {0} _____________ {1}</p>
