--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -140,4 +140,4 @@ approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance
     case-winners = <p>4. In case of the winner's refusal to conclude the Contract, recommend the procuring entity to sign a contract with {0} for the amount of {1} somoni. Parties to implement the actions provided for in paragraphs 1 and 2 of section IV.</p>
     
     title = Public Procurement Portal - Protocol for the conclusion of a contract for the supply of goods
-     approved-organization = <p><strong><<Approved>></strong> {0} _____________ {1}</p>
+     approved-organization = <p style="margin-top:0cm;margin-right:0cm;margin-bottom:7.5pt;margin-left:12cm;"><strong>&lt;&lt;Approved&gt;&gt;</strong> {0} _____________ {1}</p>
