--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -81,8 +81,8 @@ bid_assignment_lot_delivery =
 bid_assignment_lot_conditions = 
 
 
-#Pratocol contracts
-
+#Pratocol
+protocol-opening = Protocol opening
 pratacol-number = <h3>Protocol No. {0}</h3>
 automated-system = <h4>Automated system of public procurement web portal {0} in comparison, evaluation and selection of bids for the conclusion of a contract for the supply of goods</h4><br>
 general-bid-info = <h4>General bid information</h4>
@@ -141,3 +141,20 @@ approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance
     
     title = Public Procurement Portal - Protocol for the conclusion of a contract for the supply of goods
      approved-organization = <p style="margin-top:0cm;margin-right:0cm;margin-bottom:7.5pt;margin-left:12cm;"><strong>&lt;&lt;Approved&gt;&gt;</strong> {0} _____________ {1}</p>
+     
+ # protocol opening
+ 
+  opening-requests = <h4>On the opening of quotation requests received in the automated System of public procurement web portal {0}</h4><br>   
+  last-publication = <p>Date and time of the last publication <br> {0}</p>
+  set-date-time-opening = <p> Set date and time of autopsy <br> {0} <p>
+  actual-date-time-opening = <p> Actual date and time of autopsy <br> {0} <p>
+  e-procurement  = <p>E-procurement</p><br>
+  opening-quotation =<h4>Opening of quotation requests by lot No. {0}</h4>
+  query-statistics = <h5>Query statistics in DGP</h5>
+  
+  quantity-received-bids-lot = <p>Quantity of received bids by lot: {0}</p>
+  number-withdrawn-bids-lot  = <p>Number of withdrawn bids by lot: {0}</p>
+  
+  ranking-quotation = <p>The ranking of quotation requests is based on the degree of price preference.</p>
+  at-time-opening = <p>At the time of opening by lot No. {0}, the applications received from the following participants:</p>
+  
