final protocol opening

--- a/CommissionModule/src/main/resources/content/Language.properties
+++ b/CommissionModule/src/main/resources/content/Language.properties
@@ -11,6 +11,7 @@ bid_own_funds = Own funds
 befor_participating= Before participating in this order, you need to pay {0} somoni from your account.
 the_price_for  = The price for
 vendor-proposal = Vendor Proposal
+customer-proposal = Proposal of the customer
 description-of-goods = Description of goods (Form of issue)
 country-of-origin  = Country of origin
 unit-price = Unit price
@@ -101,27 +102,27 @@ approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance
      
      #header table
      
-     number = <strong>No.</strong>
-     name-and-address = <strong>Name of participant and his address</strong>
-     number-positions = <strong>Number of positions</strong>
-	 allocated-amount = <strong>Allocated amount</strong>
-	 bid-price-participant = <strong>Bid price of participant</strong>
-	 sum-savings = <strong>Sum of savings</strong>
-	 economy = <strong>Economy</strong>
-	 info-bid = <strong>Information on the content of the bid</strong>
+     number = No.
+     name-and-address = Name of participant and his address
+     number-positions = Number of positions
+	 allocated-amount = Allocated amount
+	 bid-price-participant = Bid price of participant
+	 sum-savings = Sum of savings
+	 economy = Economy
+	 info-bid = Information on the content of the bid
 	 
 	 #The value of the table field
-	 member-status = <strong>Member status</strong>
+	 member-status = Member status
 	 bid-details  = Bid details
 	 
   #table goods winner lot
      #header table
        
-     goods = <strong>Goods</strong>  
-   	 producing-country = <strong>Producing country</strong>
-   	 unit = <strong>Unit of measurement</strong>
-	 amount-per-unit = <strong>The proposed amount per unit</strong>
-	 total-goods = <strong>Total for goods</strong>
+     goods = Goods  
+   	 producing-country = Producing country
+   	 unit = Unit of measurement
+	 amount-per-unit = The proposed amount per unit
+	 total-goods = Total for goods
 	 
 	 total-price = <strong>Total price: {0}</strong>
 	 
@@ -158,3 +159,10 @@ approve-ranking = <p> 1. Approve the ranking of quotation requests in accordance
   ranking-quotation = <p>The ranking of quotation requests is based on the degree of price preference.</p>
   at-time-opening = <p>At the time of opening by lot No. {0}, the applications received from the following participants:</p>
   
+  price-for-lot = Price for lot No.{0}
+  conformity-check = Conformity check<br>of participant's offer
+  automated-claims = <p>The automated system of the Public Procurement Portal notifies that in the absence of claims, the Protocol of the automated system of the public procurement web portal <span style = "color: # 319CFF"> {0}</span> in comparison, evaluation and selection of quotations (quotations) for concluding a contract for The delivery of goods will be generated at 9-00 the second day following the day of opening applications.</p>
+  claims-fed = <p>The claims can be fed concerning the status "allowed" or "rejected", assigned proposals (quotation requests) members under the ordinal numbers 1, 2 and 3 in ranking bids by lot. Any of the above-mentioned participants has the right to file a claim regarding the assignment of one or two of these participants to the status "admitted" before the 17th day following the opening day of applications. In the event that the claim is reviewed and the status of the participant is "admitted", such a decision can no longer be challenged. If, as a result of the consideration of the claim, the status of the participant from "admitted" is changed to "rejected", then such participant shall have the right to file a counterclaim to the automated public procurement system until 17:00 the second day following the opening day of applications. The result of the consideration of the counterclaim is final. The participant, in the event that his offer was initially assigned the status of "rejected", has the right to file a claim in the automated system of public procurement until 17:00 the day following the opening day of applications. In case of satisfaction of the claim of such participant, any other participant whose offer has been granted the status "admitted" has the right to submit a counterclaim to the automated public procurement system before 17:00 the second day following the opening day of applications. The outcome of the counterclaim is final. </p>
+  submission-claim = <p>The submission of the claim must be made by sending the message in any form, in the format of the WORD document, with the attachment of the document substantiating the participant's claim (if the participant considers it necessary) to the address: <span style = "color: # 319CFF"> {0} </span> </p>
+  operator-system = <p>To the Operator of the Automated System of Public Procurement: <br> {0}</p>
+  to-take = <p>To take, taking into account the procedure for reviewing claims, the necessary actions to reflect the final results in the Protocol of the automated system of the public procurement web portal zakupki.gov.tj in comparison, evaluation and selection of bids (quotations) for concluding a contract for the supply of goods.</p>
