--- a/Izvewenija/Izvewenija-service/build.gradle
+++ b/Izvewenija/Izvewenija-service/build.gradle
@@ -4,6 +4,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
 	compileOnly project(":modules:Izvewenija:Izvewenija-api")
+	compileOnly project(":modules:SystemConfig:SystemConfig-api")
 }
 
 buildService {
