--- a/Izvewenija/Izvewenija-service/build.gradle
+++ b/Izvewenija/Izvewenija-service/build.gradle
@@ -3,8 +3,11 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "2.0.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "2.6.0"
+
+	compile files('C:/Users/Falko/Desktop/mail.jar')
 	compileOnly project(":modules:Izvewenija:Izvewenija-api")
 	compileOnly project(":modules:SystemConfig:SystemConfig-api")
+	
 }
 
 buildService {
